@@ -39,14 +39,12 @@ public class PaintingEditState {
   private PaintingData currentPainting = null;
 
   private static final Predicate<Entity> DECORATION_PREDICATE = (
-      entity) -> entity instanceof AbstractDecorationEntity;
+      entity
+  ) -> entity instanceof AbstractDecorationEntity;
 
   public PaintingEditState(
-      MinecraftClient client,
-      UUID paintingUuid,
-      int paintingId,
-      BlockPos blockPos,
-      Direction facing) {
+      MinecraftClient client, UUID paintingUuid, int paintingId, BlockPos blockPos, Direction facing
+  ) {
     this.client = client;
     this.paintingUuid = paintingUuid;
     this.paintingId = paintingId;
@@ -54,7 +52,7 @@ public class PaintingEditState {
     this.facing = facing;
 
     this.filtersState = new FiltersState(this::canStay);
-    populatePaintings();
+    this.populatePaintings();
   }
 
   public FiltersState getFilters() {
@@ -101,23 +99,23 @@ public class PaintingEditState {
   }
 
   public void setCurrentGroup(String id) {
-    if (!hasGroup(id)) {
+    if (!this.hasGroup(id)) {
       return;
     }
-    setCurrentGroup(this.allPaintings.get(id));
+    this.setCurrentGroup(this.allPaintings.get(id));
   }
 
   public void setCurrentGroup(Group group) {
     this.currentGroup = group;
     if (group != null && !group.paintings().isEmpty()) {
-      setCurrentPainting(group.paintings().get(0));
+      this.setCurrentPainting(group.paintings().getFirst());
     } else {
-      setCurrentPainting((PaintingData) null);
+      this.setCurrentPainting((PaintingData) null);
     }
   }
 
   public void clearGroup() {
-    setCurrentGroup((Group) null);
+    this.setCurrentGroup((Group) null);
   }
 
   public void setCurrentPainting(PaintingData painting) {
@@ -128,19 +126,18 @@ public class PaintingEditState {
   }
 
   public void setCurrentPainting(Function<PaintingData, PaintingData> mapper) {
-    setCurrentPainting(mapper.apply(currentPainting));
+    this.setCurrentPainting(mapper.apply(this.currentPainting));
   }
 
   public void populatePaintings() {
-    if (!allPaintings.isEmpty()) {
+    if (!this.allPaintings.isEmpty()) {
       return;
     }
 
     Registries.PAINTING_VARIANT.stream().forEach((vanillaVariant) -> {
       Identifier id = Registries.PAINTING_VARIANT.getId(vanillaVariant);
       RegistryKey<PaintingVariant> key = RegistryKey.of(Registries.PAINTING_VARIANT.getKey(), id);
-      Optional<RegistryEntry.Reference<PaintingVariant>> maybeEntry =
-          Registries.PAINTING_VARIANT.getEntry(key);
+      Optional<RegistryEntry.Reference<PaintingVariant>> maybeEntry = Registries.PAINTING_VARIANT.getEntry(key);
 
       if (maybeEntry.isEmpty()) {
         return;
@@ -150,19 +147,19 @@ public class PaintingEditState {
       boolean placeable = entry.isIn(PaintingVariantTags.PLACEABLE);
       String groupId = id.getNamespace() + (placeable ? "" : "_unplaceable");
 
-      if (!allPaintings.containsKey(groupId)) {
-        String groupName = !placeable
-            ? "Minecraft: The Hidden Ones"
-            : FabricLoader.getInstance()
+      if (!this.allPaintings.containsKey(groupId)) {
+        String groupName = !placeable ?
+            "Minecraft: The Hidden Ones" :
+            FabricLoader.getInstance()
                 .getModContainer(groupId)
                 .map((mod) -> mod.getMetadata().getName())
                 .orElse(groupId);
-        allPaintings.put(groupId, new Group(groupId, groupName, new ArrayList<>()));
+        this.allPaintings.put(groupId, new Group(groupId, groupName, new ArrayList<>()));
       }
 
-      allPaintings.get(groupId)
+      this.allPaintings.get(groupId)
           .paintings()
-          .add(new PaintingData(vanillaVariant, allPaintings.get(groupId).paintings().size()));
+          .add(new PaintingData(vanillaVariant, this.allPaintings.get(groupId).paintings().size()));
     });
 
     CustomPaintingManager paintingManager = CustomPaintingsClientMod.customPaintingManager;
@@ -170,27 +167,25 @@ public class PaintingEditState {
       String groupId = pack.id();
       String groupName = pack.name();
 
-      if (!allPaintings.containsKey(groupId)) {
-        allPaintings.put(groupId, new Group(groupId, groupName, new ArrayList<>()));
+      if (!this.allPaintings.containsKey(groupId)) {
+        this.allPaintings.put(groupId, new Group(groupId, groupName, new ArrayList<>()));
       }
 
       pack.paintings().forEach((painting) -> {
-        allPaintings.get(groupId)
+        this.allPaintings.get(groupId)
             .paintings()
-            .add(new PaintingData(new Identifier(pack.id(), painting.id()),
-                painting.index(),
-                painting.width().orElse(1),
-                painting.height().orElse(1),
-                painting.name().orElse(""),
-                painting.artist().orElse("")));
+            .add(
+                new PaintingData(new Identifier(pack.id(), painting.id()), painting.index(), painting.width().orElse(1),
+                    painting.height().orElse(1), painting.name().orElse(""), painting.artist().orElse("")
+                ));
       });
     });
 
-    allPaintings.values().forEach((group) -> {
+    this.allPaintings.values().forEach((group) -> {
       group.paintings().forEach((paintingData) -> {
         String sizeString = paintingData.width() + "x" + paintingData.height();
-        if (!canStayHashMap.containsKey(sizeString)) {
-          canStayHashMap.put(sizeString, canStay(paintingData));
+        if (!this.canStayHashMap.containsKey(sizeString)) {
+          this.canStayHashMap.put(sizeString, this.canStay(paintingData));
         }
       });
     });
@@ -198,17 +193,18 @@ public class PaintingEditState {
 
   public boolean canStay(PaintingData paintingData) {
     String sizeString = paintingData.width() + "x" + paintingData.height();
-    if (canStayHashMap.containsKey(sizeString)) {
-      return canStayHashMap.get(sizeString);
+    if (this.canStayHashMap.containsKey(sizeString)) {
+      return this.canStayHashMap.get(sizeString);
     }
-    boolean result = canStay(paintingData.getScaledWidth(), paintingData.getScaledHeight());
-    canStayHashMap.put(sizeString, result);
+    boolean result = this.canStay(paintingData.getScaledWidth(), paintingData.getScaledHeight());
+    this.canStayHashMap.put(sizeString, result);
     return result;
   }
 
+  @SuppressWarnings("deprecation")
   public boolean canStay(int width, int height) {
     World world = Objects.requireNonNull(this.client.player).getWorld();
-    Box boundingBox = getBoundingBox(width, height);
+    Box boundingBox = this.getBoundingBox(width, height);
 
     if (!world.isSpaceEmpty(boundingBox)) {
       return false;
@@ -216,48 +212,39 @@ public class PaintingEditState {
 
     int blocksWidth = Math.max(1, width / 16);
     int blocksHeight = Math.max(1, height / 16);
-    BlockPos pos = blockPos.offset(facing.getOpposite());
-    Direction direction = facing.rotateYCounterclockwise();
+    BlockPos pos = this.blockPos.offset(this.facing.getOpposite());
+    Direction direction = this.facing.rotateYCounterclockwise();
     BlockPos.Mutable mutable = new BlockPos.Mutable();
 
     for (int x = 0; x < blocksWidth; x++) {
       for (int z = 0; z < blocksHeight; z++) {
-        mutable.set(pos)
-            .move(direction, x - (blocksWidth - 1) / 2)
-            .move(Direction.UP, z - (blocksHeight - 1) / 2);
+        mutable.set(pos).move(direction, x - (blocksWidth - 1) / 2).move(Direction.UP, z - (blocksHeight - 1) / 2);
         BlockState blockState = world.getBlockState(mutable);
 
-        //noinspection deprecation
         if (!blockState.isSolid() && !AbstractRedstoneGateBlock.isRedstoneGate(blockState)) {
           return false;
         }
       }
     }
 
-    Entity entity = world.getEntityById(paintingId);
-    PaintingEntity currentPainting =
-        entity instanceof PaintingEntity ? (PaintingEntity) entity : null;
+    Entity entity = world.getEntityById(this.paintingId);
+    PaintingEntity currentPainting = entity instanceof PaintingEntity ? (PaintingEntity) entity : null;
 
     return world.getOtherEntities(currentPainting, boundingBox, DECORATION_PREDICATE).isEmpty();
   }
 
   private Box getBoundingBox(int width, int height) {
-    double posX = blockPos.getX() + 0.5 - facing.getOffsetX() * 0.46875 +
-        facing.rotateYCounterclockwise().getOffsetX() * offsetForEven(width);
-    double posY = blockPos.getY() + 0.5 + offsetForEven(height);
-    double posZ = blockPos.getZ() + 0.5 - facing.getOffsetZ() * 0.46875 +
-        facing.rotateYCounterclockwise().getOffsetZ() * offsetForEven(width);
+    double posX = this.blockPos.getX() + 0.5 - this.facing.getOffsetX() * 0.46875 +
+        this.facing.rotateYCounterclockwise().getOffsetX() * this.offsetForEven(width);
+    double posY = this.blockPos.getY() + 0.5 + this.offsetForEven(height);
+    double posZ = this.blockPos.getZ() + 0.5 - this.facing.getOffsetZ() * 0.46875 +
+        this.facing.rotateYCounterclockwise().getOffsetZ() * this.offsetForEven(width);
 
-    double sizeX = (facing.getAxis() == Direction.Axis.Z ? width : 1) / 32D;
+    double sizeX = (this.facing.getAxis() == Direction.Axis.Z ? width : 1) / 32D;
     double sizeY = height / 32D;
-    double sizeZ = (facing.getAxis() == Direction.Axis.Z ? 1 : width) / 32D;
+    double sizeZ = (this.facing.getAxis() == Direction.Axis.Z ? 1 : width) / 32D;
 
-    return new Box(posX - sizeX,
-        posY - sizeY,
-        posZ - sizeZ,
-        posX + sizeX,
-        posY + sizeY,
-        posZ + sizeZ);
+    return new Box(posX - sizeX, posY - sizeY, posZ - sizeZ, posX + sizeX, posY + sizeY, posZ + sizeZ);
   }
 
   private double offsetForEven(int size) {
